--- a/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/app/src/main/res/layout/activity_sign_in_page.xml
@@ -10,34 +10,53 @@
         android:id="@+id/app_name_textview"
         android:layout_width="98dp"
         android:layout_height="22dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/app_name_textview"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/username_signin_edittext"
+        app:layout_constraintBottom_toTopOf="@+id/materialEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/username_signin_edittext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/materialEditText"
+        android:layout_width="216dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:ems="10"
+
         android:hint="@string/username_editText_hint"
-        android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/password_signin_edittext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+        <!--app:met_baseColor="#"-->
+        <!--app:met_primaryColor="#"-->
+        <!--app:met_errorColor="#"/>-->
+
+
+    <!--<EditText-->
+        <!--android:id="@+id/username_signin_edittext"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="2dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:ems="10"-->
+        <!--android:hint="@string/username_edittext"-->
+        <!--android:inputType="textPersonName"-->
+        <!--android:textAlignment="center"-->
+        <!--app:layout_constraintBottom_toTopOf="@+id/password_signin_edittext"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
 
     <EditText
         android:id="@+id/password_signin_edittext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="44dp"
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -45,6 +64,7 @@
         android:hint="@string/password_edittext"
         android:inputType="textPassword"
         android:textAlignment="center"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -53,9 +73,9 @@
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="52dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginStart="8dp"
         android:onClick="signInUser"
         android:text="@string/sign_in_button"
         android:textAlignment="center"
@@ -67,9 +87,9 @@
         android:id="@+id/or_textview"
         android:layout_width="18dp"
         android:layout_height="20dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="60dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginStart="8dp"
         android:text="or"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
@@ -80,9 +100,9 @@
         android:id="@+id/sign_up_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="signUpUser"
         android:text="@string/sign_up_button"
         android:textAlignment="center"
