--- a/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/app/src/main/res/layout/activity_sign_in_page.xml
@@ -10,10 +10,10 @@
         android:id="@+id/app_name_textview"
         android:layout_width="98dp"
         android:layout_height="22dp"
-        android:layout_marginBottom="80dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="@string/app_name_textview"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="80dp"
+        android:text="@string/welcome_textview"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/materialEditText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
         android:layout_marginBottom="60dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="or"
+        android:text="@string/or_textview"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
         app:layout_constraintEnd_toEndOf="parent"
