--- a/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/app/src/main/res/layout/activity_sign_in_page.xml
@@ -53,7 +53,7 @@
         <!--app:layout_constraintEnd_toEndOf="parent"-->
         <!--app:layout_constraintStart_toStartOf="parent" />-->
 
-    <EditText
+    <com.rengwuxian.materialedittext.MaterialEditText
         android:id="@+id/password_signin_edittext"
         android:layout_width="216dp"
         android:layout_height="44dp"
