--- a/app/src/main/res/layout/list_services.xml
+++ b/app/src/main/res/layout/list_services.xml
@@ -9,7 +9,7 @@
 
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_marginTop="8dp"
         card_view:cardCornerRadius="4dp">
@@ -27,7 +27,7 @@
 
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="90dp"
+                android:layout_marginEnd="200dp"
                 android:text="@string/service_name"
                 card_view:layout_constraintEnd_toStartOf="@+id/textview_service_value"
                 card_view:layout_constraintHorizontal_bias="0.0"
