--- a/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/app/src/main/res/layout/activity_sign_in_page.xml
@@ -8,24 +8,26 @@
 
     <TextView
         android:id="@+id/app_name_textview"
-        android:layout_width="98dp"
-        android:layout_height="22dp"
+        android:layout_width="197dp"
+        android:layout_height="44dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="44dp"
         android:text="@string/welcome_textview"
         android:textAlignment="center"
+        android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/materialEditText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.rengwuxian.materialedittext.MaterialEditText
         android:id="@+id/materialEditText"
         android:layout_width="216dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="28dp"
 
         android:hint="@string/username_editText_hint"
         android:textAlignment="center"
@@ -57,9 +59,9 @@
         android:id="@+id/password_signin_edittext"
         android:layout_width="216dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="80dp"
         android:ems="10"
         android:hint="@string/password_edittext"
         android:inputType="textPassword"
@@ -71,11 +73,10 @@
 
     <Button
         android:id="@+id/sign_in_button"
-        android:layout_width="wrap_content"
+        android:layout_width="156dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="52dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:onClick="signInUser"
         android:text="@string/sign_in_button"
         android:textAlignment="center"
@@ -87,9 +88,9 @@
         android:id="@+id/or_textview"
         android:layout_width="18dp"
         android:layout_height="20dp"
-        android:layout_marginBottom="60dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/or_textview"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
@@ -98,11 +99,11 @@
 
     <Button
         android:id="@+id/sign_up_button"
-        android:layout_width="wrap_content"
+        android:layout_width="156dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="72dp"
         android:onClick="signUpUser"
         android:text="@string/sign_up_button"
         android:textAlignment="center"
